k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aiden
  labels:
    app: aiden
